@@ -1,3 +1,9 @@
+2025-03-15  Sean Whitton  <spwhitton@spwhitton.name>
+
+	* tramp-cmds.el (tramp-revert-buffer-with-sudo)
+	(tramp-dired-find-file-with-sudo): Touch up documentation of
+	these features.  Add FIXMEs about renaming the two commands.
+
 2025-03-15  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-cmds.el (tramp-dired-buffer-command-completion-p):
